--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PopularitySystem import * \n",
-    "from ClassificationSystem import *\n",
+    "from systems.PopularitySystem import * \n",
+    "from systems.ClassificationSystem import *\n",
     "#from ContentSystem import *\n",
-    "from ModelSystem import *\n",
-    "from CorrelationSystem import *\n",
+    "from systems.ModelSystem import *\n",
+    "from systems.CorrelationSystem import *\n",
+    "from systems.ContentSystem import *\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -19,13 +20,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Popularity Based Recommendation System\n",
-    "#### Recommends restaurants by popularity, determined by amount of reviews."
+    "# 1. Popularity Based Recommendation System\n",
+    "### Recommends restaurants by popularity, determined by amount of reviews."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +155,7 @@
        "6     low                 ?   132834  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,13 +169,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Correlation Based Recommendation System\n",
-    "#### Uses Pearson R Correlation Coefficient to recommend restaurants favored by fans of the input restaurant."
+    "# 2. Correlation Based Recommendation System\n",
+    "### Uses Pearson R Correlation Coefficient to recommend restaurants favored by fans of the input restaurant."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +310,7 @@
        "6       1.0   135041  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +324,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification Based Recommendation System"
+    "# 3. Classification Based Recommendation System\n",
+    "### Uses Logistic Regression to classify products as \"recommend\" / \"dont' recommend\""
    ]
   },
   {
@@ -393,20 +395,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Based Collaborative Filter\n",
-    "#### Uses Truncated Singular Value Decomposition to Find Preferred Movies of Those who Favored the Input Movie"
+    "# 4. Model Based Collaborative Filter\n",
+    "### Uses Truncated Singular Value Decomposition to Find Preferred Movies of Those who Favored the Input Movie"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model Based Movie Recommendation System. Uses Singular Value Decomposition Trained: False\n"
+      "Model Based Movie Recommendation System. Uses Singular Value Decomposition to Analyze Latent Factors Trained: False\n"
      ]
     },
     {
@@ -416,11 +418,10 @@
        " 'Terminator, The (1984)',\n",
        " 'Fugitive, The (1993)',\n",
        " 'Raiders of the Lost Ark (1981)',\n",
-       " 'Empire Strikes Back, The (1980)',\n",
-       " 'Indiana Jones and the Last Crusade (1989)']"
+       " 'Empire Strikes Back, The (1980)']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,15 +429,170 @@
    "source": [
     "sys = ModelSystem()\n",
     "print(sys)\n",
-    "sys.generate_recommendations(\"Die Hard (1988)\", 6)"
+    "sys.generate_recommendations(\"Die Hard (1988)\", 5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Content Based Collaborative Filter\n"
+    "# 5. Content Based Collaborative Filter\n",
+    "### Uses k Nearest Neighbors to recommend similar cars to user preferences"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cyl</th>\n",
+       "      <th>disp</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>drat</th>\n",
+       "      <th>wt</th>\n",
+       "      <th>qsec</th>\n",
+       "      <th>vs</th>\n",
+       "      <th>am</th>\n",
+       "      <th>gear</th>\n",
+       "      <th>carb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Merc 450SE</td>\n",
+       "      <td>16.4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>275.8</td>\n",
+       "      <td>180</td>\n",
+       "      <td>3.07</td>\n",
+       "      <td>4.070</td>\n",
+       "      <td>17.40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Merc 450SL</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>275.8</td>\n",
+       "      <td>180</td>\n",
+       "      <td>3.07</td>\n",
+       "      <td>3.730</td>\n",
+       "      <td>17.60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Merc 450SLC</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>275.8</td>\n",
+       "      <td>180</td>\n",
+       "      <td>3.07</td>\n",
+       "      <td>3.780</td>\n",
+       "      <td>18.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Dodge Challenger</td>\n",
+       "      <td>15.5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>2.76</td>\n",
+       "      <td>3.520</td>\n",
+       "      <td>16.87</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>AMC Javelin</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3.15</td>\n",
+       "      <td>3.435</td>\n",
+       "      <td>17.30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                name   mpg  cyl   disp   hp  drat     wt   qsec  vs  am  gear  \\\n",
+       "11        Merc 450SE  16.4    8  275.8  180  3.07  4.070  17.40   0   0     3   \n",
+       "12        Merc 450SL  17.3    8  275.8  180  3.07  3.730  17.60   0   0     3   \n",
+       "13       Merc 450SLC  15.2    8  275.8  180  3.07  3.780  18.00   0   0     3   \n",
+       "21  Dodge Challenger  15.5    8  318.0  150  2.76  3.520  16.87   0   0     3   \n",
+       "22       AMC Javelin  15.2    8  304.0  150  3.15  3.435  17.30   0   0     3   \n",
+       "\n",
+       "    carb  \n",
+       "11     3  \n",
+       "12     3  \n",
+       "13     3  \n",
+       "21     2  \n",
+       "22     2  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys = ContentSystem()\n",
+    "pref = [15, 300, 160, 3.2]\n",
+    "sys.generate_recommendations(pref, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -455,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
